--- a/docs/Инструкиця-редакция 0.0.1.md
+++ b/docs/Инструкиця-редакция 0.0.1.md
@@ -11,6 +11,31 @@ https://ru.investing.com/members/200727650/opinion
 4 - Яндекс новости
 https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&rel=tm
 
+[ya](https://ya.ru)
+
+[page-0](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=0)<br>
+[page-1](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=1)<br>
+[page-2](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=2)<br>
+[page-3](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=3)<br>
+[page-4](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=4)<br>
+[page-5](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=5)<br>
+[page-6](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=6)<br>
+[page-7](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=7)<br>
+[page-8](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=8)<br>
+[page-9](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=9)<br>
+[page-10](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=10)<br>
+[page-11](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=11)<br>
+[page-12](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=12)<br>
+[page-13](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=13)<br>
+[page-14](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=14)<br>
+[page-15](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=15)<br>
+[page-16](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=16)<br>
+[page-17](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=17)<br>
+[page-18](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=18)<br>
+[page-19](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=19)<br>
+[page-20](https://news.yandex.ru/yandsearch?text=%D0%B0%D0%BB%D0%BE%D1%80&rpt=nnews2&p=20)<br>
+
+
 
 
 Авторы:
